--- a/client/angular.json
+++ b/client/angular.json
@@ -13,6 +13,11 @@
           "@schematics/angular:service": {
           "skipTests": true,
           "path": "src/core/services"
+        },
+
+        "@schematics/angular:guard": {
+          "skipTests": true,
+          "path": "src/core/guards"
         }
       },
       "root": "",
