--- a/client/angular.json
+++ b/client/angular.json
@@ -18,7 +18,14 @@
         "@schematics/angular:guard": {
           "skipTests": true,
           "path": "src/core/guards"
+        },
+
+        "@schematics/angular:interceptor": {
+          "skipTests": true,
+          "path": "src/core/interceptors"
         }
+
+        
       },
       "root": "",
       "sourceRoot": "src",
