--- a/client/angular.json
+++ b/client/angular.json
@@ -23,8 +23,12 @@
         "@schematics/angular:interceptor": {
           "skipTests": true,
           "path": "src/core/interceptors"
-        }
+        },
 
+        "@schematics/angular:resolver": {
+          "skipTests": true,
+          "path": "src"
+        }
         
       },
       "root": "",
