end of section 9

--- a/client/angular.json
+++ b/client/angular.json
@@ -28,7 +28,14 @@
         "@schematics/angular:resolver": {
           "skipTests": true,
           "path": "src"
+        },
+
+         "@schematics/angular:pipe": {
+          "skipTests": true,
+          "path": "src/core/pipes"
         }
+
+
         
       },
       "root": "",
